--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form action="">
             <!-- <input type="password" name="passwordUser" id="passwordUser"> -->
             <input type="text" name="User" id="User" required>
-            <input type="reset" name="reset" id="reset">
+            <!-- <input type="reset" name="reset" id="reset"> -->
             <input type="submit" name="submit" id="submit">
         </form>
     </section>
